[package]
name = "wlog"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
shell-words = "1"
simplelog = "0.8"
structopt = "0.3"

[profile.release]
codegen-units = 1
lto = true
